--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /node_modules
 /public/build
 /public/hot
-# /public/storage
-# /public/types
+/public/storage
+/public/types
 /storage/*.key
 /vendor
 /config/sentry.php
