--- a/package.json
+++ b/package.json
@@ -52,8 +52,6 @@
         "vue-inline-svg": "^2.1.0",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.1.5",
-        "yup": "^0.32.11",
-        "pinia": "^2.0.22",
-        "pinia-plugin-persistedstate": "^2.2.0"
+        "yup": "^0.32.11"
     }
 }
