--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "datatables.net-vue3": "^1.0.0",
         "dropzone": "^6.0.0-beta.2",
         "element-plus": "^2.2.16",
+        "glightbox": "^3.3.0",
         "line-awesome": "^1.3.0",
         "nouislider": "^15.6.1",
         "pinia": "^2.0.22",
@@ -48,6 +49,7 @@
         "quill": "^1.3.7",
         "socicon": "^3.0.5",
         "sweetalert2": "^11.4.32",
+        "swiper": "^11.1.14",
         "vee-validate": "^4.6.7",
         "vue": "^3.2.36",
         "vue-inline-svg": "^2.1.0",
